# savvyboard

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  boards.py  changelog.py  dashboard.py  feedback.py  public.py  roadmap.py  users.py  workspaces.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: board.py  changelog.py  feedback.py  user.py  workspace.py
backend/app/schemas/: board.py  changelog.py  common.py  feedback.py  user.py  workspace.py
backend/app/tests/: conftest.py  test_auth.py  test_feedback.py  test_security.py
backend/scripts/: seed_demo.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: take-screenshots.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: api.ts  client.ts
frontend/src/components/fluent/: FluentProvider.tsx  index.tsx
frontend/src/components/layout/: AdminLayout.tsx  PublicLayout.tsx
frontend/src/components/ui/: Badge.tsx  Button.test.tsx  Button.tsx  Card.tsx  EmptyState.tsx  FeedbackFilterBar.test.tsx  FeedbackFilterBar.tsx  (+6 more)
frontend/src/contexts/: AuthContext.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: LandingPage.tsx  NotFoundPage.tsx
frontend/src/providers/: AuthProvider.tsx
frontend/src/routes/: index.tsx
frontend/src/types/: index.ts
(+13 files in other folders)
